--- a/examples/librarian/librarian.yaml
+++ b/examples/librarian/librarian.yaml
@@ -3,15 +3,15 @@ id: librarian_examples
 resources:
   - id: rabbitmq_service1
     from: resources/rabbitmq_service
-    location: {{node}}
-    values:
+    location: #{node}#
+    input:
       management_port: 15672
       port: 5672
 
   - id: librarian
-    location: {{node}}
+    location: #{node}#
     from: resources/librarian
-    values:
+    input:
       modules:
         - rabbitmq_service1::module::NO_EVENTS
 
@@ -19,4 +19,4 @@ events:
   - type: depends_on
     parent_action: librarian.run
     state: success
-    depend_action: rabbitmq_service1.run
+    child_action: rabbitmq_service1.run
