--- a/examples/openstack/rabbitmq_user.yaml
+++ b/examples/openstack/rabbitmq_user.yaml
@@ -4,14 +4,14 @@ resources:
   - id: rabbit_user
     from: resources/rabbitmq_user
     location: {{node}}
-    values:
+    input:
         user_name: {{user_name}}
         password: {{password}}
         vhost_name: {{vhost_res}}::vhost_name
 
 updates:
   - id: {{for}}
-    values:
+    input:
         {{for_user}}: rabbit_user::user_name
         {{for_password}}: rabbit_user::password
 
@@ -19,4 +19,4 @@ events:
   - type: depends_on
     parent_action: rabbit_user.run
     state: success
-    depend_action: {{for}}.update
+    child_action: {{for}}.update
