--- a/templates/glance_base/1.0.0/glance_base.yaml
+++ b/templates/glance_base/1.0.0/glance_base.yaml
@@ -3,7 +3,7 @@ id: glance_base
 resources:
   - id: glance_db
     from: resources/mariadb_db
-    values:
+    input:
       db_name: #{db_name}#
       login_user: '#{login_user}#'
       login_password: '#{login_password}#'
@@ -14,7 +14,7 @@ resources:
 
   - id:  glance_db_user
     from: resources/mariadb_user
-    values:
+    input:
       user_password: '#{user_password}#'
       user_name: '#{user_name}#'
       db_name: 'keystone_db::db_name'
