--- a/templates/sources/1.0.0/sources.yaml
+++ b/templates/sources/1.0.0/sources.yaml
@@ -3,6 +3,6 @@ resources:
   - id: sources#{index}#
     from: resources/sources
     location: #{node}#
-    values:
+    input:
       sources:
         - {src: /tmp/sources_test, dst: /tmp/sources_test}
