--- a/templates/controller/1.0.0/controller.yaml
+++ b/templates/controller/1.0.0/controller.yaml
@@ -3,7 +3,7 @@ id: primary_controller
 resources:
   - id: mariadb_service
     from: resources/mariadb_service
-    values:
+    input:
       port: 3306
       root_password: mariadb
       image: mariadb 
@@ -13,14 +13,14 @@ resources:
 
   - id: rabbitmq_service
     from: resources/rabbitmq_service
-    values:
+    input:
       ip: '#{ip}#'
       ssh_user: '#{ssh_user}#'
       ssh_key: '#{ssh_key}#'
 
   - id: keystone_base
     from: templates/keystone_base
-    values:
+    input:
       login_user: root
       login_password: 'mariadb_service::root_password'
       login_port: 'mariadb_service::port'
@@ -34,7 +34,7 @@ resources:
 
   - id:  keystone_api_1
     from: templates/keystone_api
-    values:
+    input:
       idx: 1
       db_password: 'keystone_db_user::user_password'
       db_user: 'keystone_db_user::user_name'
@@ -50,7 +50,7 @@ resources:
 
   - id: openstack_base
     from: templates/openstack_base
-    values:
+    input:
       ip: '#{ip}#'
       ssh_user: '#{ssh_user}#'
       ssh_key: '#{ssh_key}#'
@@ -61,7 +61,7 @@ resources:
 
   - id: openrc_file
     from: resources/openrc_file
-    values:
+    input:
       keystone_host: 'keystone_service_1::ip'
       keystone_port: 'keystone_service_1::admin_port'
       tenant: 'admin_user::tenant_name'
