--- a/templates/glance/1.0.0/glance.yaml
+++ b/templates/glance/1.0.0/glance.yaml
@@ -3,7 +3,7 @@ id: glance_#{idx}#
 resources:
   - id: glance_base_#{ idx }#
     from: templates/glance_db
-    values:
+    input:
       idx: '#{ idx }#'
 
       db_name: '#{ db_name }#'
