--- a/templates/mos_repos/1.0.0/mos_repos.yaml
+++ b/templates/mos_repos/1.0.0/mos_repos.yaml
@@ -3,7 +3,7 @@ resources:
   - id: mos_holdback_#{index}#
     from: resources/apt_repo
     location: #{node}#
-    values:
+    input:
       name: mos-holdback
       package: '*'
       repo: deb http://mirror.fuel-infra.org/mos-repos/ubuntu/8.0/ mos8.0-holdback main restricted
@@ -12,7 +12,7 @@ resources:
   - id: mos_security_#{index}#
     from: resources/apt_repo
     location: #{node}#
-    values:
+    input:
       name: mos
       package: '*'
       repo: deb http://mirror.fuel-infra.org/mos-repos/ubuntu/8.0/ mos8.0-security main restricted
@@ -21,7 +21,7 @@ resources:
   - id: mos_updates_#{index}#
     from: resources/apt_repo
     location: #{node}#
-    values:
+    input:
       name: mos_update
       package: '*'
       repo: deb http://mirror.fuel-infra.org/mos-repos/ubuntu/8.0/ mos8.0-updates main restricted
@@ -30,7 +30,7 @@ resources:
   - id: managed_apt_#{index}#
     from: resources/managed_apt
     location: #{node}#
-    values:
+    input:
       names:
         - mos_holdback_#{index}#::name
         - mos_security_#{index}#::name
