Added passwords to schemas in transports
Change-Id: I213c321d5f66fe49da758cfc48c1e4bf7b9df7fe

--- a/resources/transport_ssh/1.0.0/meta.yaml
+++ b/resources/transport_ssh/1.0.0/meta.yaml
@@ -1,6 +1,9 @@
 input:
   ssh_key:
-    schema: str!
+    schema: str
+    value:
+  ssh_password:
+    schema: str
     value:
   ssh_user:
     schema: str!
