Add wait command to docker_container

--- a/resources/docker_container/1.0.0/actions/run.yaml
+++ b/resources/docker_container/1.0.0/actions/run.yaml
@@ -35,3 +35,11 @@
          {{ key }}: {{ value }}
          {% endfor %}
        {% endif %}
+
+    - name: Waiting for app in container
+      when: {{wait_cmd}}
+      shell: docker exec -t {{ resource_name }} {{wait_cmd}}
+      register: result
+      until: result.rc == 0
+      retries: 30
+      delay: 0.5
