Removed ssh_ prefix in ssh transports
Closes-bug: 1537093

--- a/resources/transport_ssh/1.0.0/meta.yaml
+++ b/resources/transport_ssh/1.0.0/meta.yaml
@@ -1,14 +1,14 @@
 input:
-  ssh_key:
+  key:
     schema: str
     value:
-  ssh_password:
+  password:
     schema: str
     value:
-  ssh_user:
+  user:
     schema: str!
     value:
-  ssh_port:
+  port:
     schema: int!
     value: 22
   name:
