--- a/templates/nodes/1.0.0/nodes.yaml
+++ b/templates/nodes/1.0.0/nodes.yaml
@@ -5,9 +5,9 @@ resources:
   - id: ssh_transport#{j}#
     from: resources/transport_ssh
     input:
-      ssh_user: 'vagrant'
-      ssh_key: '/vagrant/.vagrant/machines/solar-dev#{j}#/virtualbox/private_key'
-      ssh_password: null
+      user: 'vagrant'
+      key: '/vagrant/.vagrant/machines/solar-dev#{j}#/virtualbox/private_key'
+      password: null
   - id: rsync#{j}#
     from: resources/transport_rsync
     input:
@@ -18,11 +18,11 @@ resources:
     from: resources/transports
     input:
       transports:
-        - key: ssh_transport#{j}#::ssh_key
-          user: ssh_transport#{j}#::ssh_user
-          port: ssh_transport#{j}#::ssh_port
+        - key: ssh_transport#{j}#::key
+          user: ssh_transport#{j}#::user
+          port: ssh_transport#{j}#::port
           name: ssh_transport#{j}#::name
-          password: ssh_transport#{j}#::ssh_password
+          password: ssh_transport#{j}#::password
         - key: rsync#{j}#::key
           name: rsync#{j}#::name
           user: rsync#{j}#::user
