Change sudo to become in ansible resources
As we are using ansible 2.0, we should move from sudo to become to avoid
deprecation.

Change-Id: Ia084759b9c38f5c045ab14eab3af63a2ad33069f
Closes-bug: 1547430

--- a/resources/container_networks/1.0.0/actions/run.yaml
+++ b/resources/container_networks/1.0.0/actions/run.yaml
@@ -1,5 +1,5 @@
 - hosts: '*'
-  sudo: yes
+  become: yes
   gather_facts: false
   # this is default variables, they will be overwritten by resource one
   vars:
