--- a/resources/hosts_file/1.0.0/actions/run.yaml
+++ b/resources/hosts_file/1.0.0/actions/run.yaml
@@ -1,5 +1,5 @@
 - hosts: [{{host}}]
-  sudo: yes
+  become: yes
   tasks:
     {% for val in hosts %}
     - name: Create hosts entries for {{val['name']}} => {{val['ip']}}
