--- a/resources/librarian/0.0.1/actions/remove.yaml
+++ b/resources/librarian/0.0.1/actions/remove.yaml
@@ -1,5 +1,5 @@
 - hosts: [{{host}}]
-  sudo: yes
+  become: yes
   tasks:
     - file: path={{modules_path}} state=absent
     - file: path={{modules_path}}/../Puppetfile state=absent
