--- a/resources/managed_apt/1.0.0/actions/run.yaml
+++ b/resources/managed_apt/1.0.0/actions/run.yaml
@@ -1,5 +1,5 @@
 - hosts: [{{host}}]
-  sudo: yes
+  become: yes
   tasks:
     - shell: echo 'Managed by solar' > /etc/apt/sources.list
       when: {{ensure_other_removed}}
