--- a/resources/rabbitmq_vhost/1.0.0/actions/run.yaml
+++ b/resources/rabbitmq_vhost/1.0.0/actions/run.yaml
@@ -1,5 +1,5 @@
 - hosts: [{{host}}]
-  sudo: yes
+  become: yes
   tasks:
       - rabbitmq_vhost: name={{vhost_name}}
                         state=present
