--- a/resources/riak_node/1.0.0/actions/join.yaml
+++ b/resources/riak_node/1.0.0/actions/join.yaml
@@ -1,5 +1,5 @@
 - hosts: [{{host}}]
-  sudo: yes
+  become: yes
   tasks:
     - shell: riak-admin cluster join {{join_to}}
       ignore_errors: true
