--- a/resources/data_container/1.0.0/actions/remove.yaml
+++ b/resources/data_container/1.0.0/actions/remove.yaml
@@ -1,6 +1,6 @@
 
 - hosts: [{{host}}]
-  sudo: yes
+  become: yes
   tasks:
     - shell: docker stop {{ resource_name }}
     - shell: docker rm {{ resource_name }}
