--- a/resources/dnsmasq/1.0.0/actions/exclude_mac_pxe.yaml
+++ b/resources/dnsmasq/1.0.0/actions/exclude_mac_pxe.yaml
@@ -1,5 +1,5 @@
 - hosts: [{{host}}]
-  sudo: yes
+  become: yes
 
   tasks:
     - lineinfile: create=yes dest=/etc/dnsmasq.d/no_pxe_{{exclude_mac_pxe | replace(':', '_')}}.conf line="dhcp-host={{exclude_mac_pxe}},set:nopxe"
