--- a/resources/hosts_file/1.0.0/actions/remove.yaml
+++ b/resources/hosts_file/1.0.0/actions/remove.yaml
@@ -1,5 +1,5 @@
 - hosts: [{{host}}]
-  sudo: yes
+  become: yes
   tasks:
     - name: Remove hosts file
       shell: echo '# flushed by ansible' > /etc/hosts
