--- a/resources/keystone_tenant/1.0.0/actions/run.yaml
+++ b/resources/keystone_tenant/1.0.0/actions/run.yaml
@@ -1,5 +1,5 @@
 - hosts: [{{host}}]
-  sudo: yes
+  become: yes
   tasks:
     - name: install python-keystoneclient
       shell: apt-get install python-keystoneclient
