--- a/resources/lxc_container/1.0.0/actions/run.yaml
+++ b/resources/lxc_container/1.0.0/actions/run.yaml
@@ -1,5 +1,5 @@
 - hosts: '*'
-  sudo: yes
+  become: yes
   gather_facts: false
   # this is default variables, they will be overwritten by resource one
   vars:
