--- a/resources/transport_solar_agent/1.0.0/actions/update.yaml
+++ b/resources/transport_solar_agent/1.0.0/actions/update.yaml
@@ -1,5 +1,5 @@
 - hosts: [{{ host }}]
-  sudo: yes
+  become: yes
   tasks:
     - shell: pip install git+git://github.com/Mirantis/solar-agent.git
     - shell: start-stop-daemon --stop --make-pidfile --pidfile /tmp/solar_agent.pid --startas /bin/bash -- -c "exec /usr/local/bin/solar_agent run --port {{solar_agent_port}} --base tcp > /tmp/solar_agent.log 2>&1"
