--- a/resources/sources/1.0.0/meta.yaml
+++ b/resources/sources/1.0.0/meta.yaml
@@ -1,6 +1,6 @@
 handler: naive_sync
 version: 1.0.0
 input:
-    sources:
-        schema: [{'src': 'str!', 'dst': 'str!'}]
-        value: []
+  sources:
+    schema: [{'src': 'str!', 'dst': 'str!', 'permissions': 'bool', 'group': 'str', 'owner': 'str', 'use_sudo': 'bool'}]
+    value: []
